# qnmfits

./: .gitignore  README.md  pyproject.toml
examples/: code_comparison.ipynb  correcting_measured_amplitude.ipynb  even_more_overtones.ipynb  free_frequency_fitting.ipynb  gp_exploration.ipynb  greedy_fit.ipynb  likelihood_fits.ipynb  mode_stability.ipynb  package_tutorial.ipynb  qnm_taxonomy.ipynb  quadratic_qnms.ipynb  sxs_analysis.py
examples/quadratic_qnms/: SXS:BBH_ExtCCE_superrest:0305_metadata.json  even_more_overtones.ipynb  modeling_memory.ipynb  quadratic_qnms.ipynb
qnmfits/: __init__.py  likefits.py  qnm.py  qnmfits  qnmfits.py  spatial_mapping_functions.py  utils.py
qnmfits/Waveforms/: Base.py  Custom.py  Simulation.py  Surrogate.py
