[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qnmfits"
version = "0.0.1"
authors = [
  { name="Eliot Finch", email="efinch@star.sr.bham.ac.uk" },
  { name="Christopher J. Moore", email="cmoore@star.sr.bham.ac.uk"},
]
description = "Least-squares fitting of quasinormal modes to ringdown waveforms"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "tabulate",
    "tqdm",
    "quaternionic",
    "spherical",
    "qnm",
    "sxs",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/EliotFinch/qnmfits"
